--- a/app/globals.css
+++ b/app/globals.css
@@ -54,3 +54,13 @@
 .ReactCollapse--collapse {
   transition: height 500ms;
 }
+
+.noise-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../public/images/noise-texture.png");
+  opacity: 0.025;
+}
