--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../public/images/noise-texture.png");
+  background-image: url("/images/noise-texture.png");
   opacity: 0.025;
 }
