--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,6 @@
   width: calc(100% - 40px);
   transform: translateX(-50%);
   height: 2px;
-  /* background: linear-gradient(to bottom, #fff, #4b372b); */
   background: #fff;
 }
 
@@ -33,7 +32,6 @@
     top: 0;
     width: 2px;
     height: 100%;
-    /* background: linear-gradient(to bottom, #fff, #4b372b); */
     background: #fff;
   }
 }
@@ -53,12 +51,26 @@
   transition: height 500ms;
 }
 
-.noise-layer {
+/* .noise-layer {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-image: url("../public/images/noise-texture.png");
-  opacity: 0.025;
+  opacity: 0.25;
+  z-index: 999;
+} */
+
+.noise-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../public/images/noise-texture.png");
+  opacity: 0.02;
+  z-index: 11;
 }
